K8s/mygeoserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mygeo
  namespace: ingress-basic
spec:
  selector:
    matchLabels:
      run: mygeo
  replicas: 1
  template:
    metadata:
      labels:
        run: mygeo
    spec:
      containers:
      - name: mygeo
        image: kartoza/geoserver
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/geoserverdata"
          name: volume
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: volume
