K8s/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: mygeo2
  labels:
    run: mygeo2
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: mygeo2
