K8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "5"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "5"
spec:
  rules:
  - host: nz.52.142.17.240.nip.io
    http:
      paths:
      - backend:
          serviceName: mygeo2
          servicePort: 8080
  - host: aus.52.142.17.240.nip.io
    http:
      paths:
      - backend:
          serviceName: mygeo
          servicePort: 8080
